--- a/aboutme.html
+++ b/aboutme.html
@@ -5,8 +5,8 @@
 </head>
 <body>
   
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+<h1>This is my face</h1>
+<p>Look at my dimples.</p>
   
 </body>
 </html>
