--- a/aboutme.html
+++ b/aboutme.html
@@ -5,8 +5,9 @@
 </head>
 <body>
   
-<h1>This is my face</h1>
-<p>Look at my dimples.</p>
+<h1>Reflection</h1>
+<p>Today was actually pretty fun. I was able to do a topic that I genuinely enjoyed. Some parts were kind of difficult but eventually I was
+ able to understand what to do. I didn't entirely finish everything I wanted to happen in my story but I still got a fair enough amount done.</p>
   
 </body>
 </html>
