--- a/aboutme.html
+++ b/aboutme.html
@@ -9,6 +9,9 @@
 <p>Today was actually pretty fun. I was able to do a topic that I genuinely enjoyed. Some parts were kind of difficult but eventually I was
  able to understand what to do. I didn't entirely finish everything I wanted to happen in my story but I still got a fair enough amount done.</p>
   
+ 
+ <h2> Reflection</h2>
+ <p> A list is information that you can easily get to by using brackets. I worked best with Brittany because we both had so much common and got to express our love for Ed Sheeran. 
 </body>
 </html>
 
