--- a/aboutme.html
+++ b/aboutme.html
@@ -11,7 +11,8 @@
   
  
  <h2> Reflection</h2>
- <p> A list is information that you can easily get to by using brackets. I worked best with Brittany because we both had so much common and got to express our love for Ed Sheeran. 
+ <p> A list is information that you can easily get to by using brackets. 
+  I worked best with Brittany because we both had so much common and got to express our love for Ed Sheeran. 
 </body>
 </html>
 
