--- a/aboutme.html
+++ b/aboutme.html
@@ -3,7 +3,15 @@
  </head>
 <title>Page Title</title>
 </head>
-<body>
+
+<style>
+ h1 (
+   color: purple:
+ 
+  )
+ <body(
+   color: red:
+   background color: yellow
   
 <h1>Reflection</h1>
 <p>Today was actually pretty fun. I was able to do a topic that I genuinely enjoyed. Some parts were kind of difficult but eventually I was
