--- a/aboutme.html
+++ b/aboutme.html
@@ -13,6 +13,7 @@
    color: red:
    background color: yellow
   
+</style>
 <h1>Reflection</h1>
 <p>Today was actually pretty fun. I was able to do a topic that I genuinely enjoyed. Some parts were kind of difficult but eventually I was
  able to understand what to do. I didn't entirely finish everything I wanted to happen in my story but I still got a fair enough amount done.</p>
