--- a/aboutme.html
+++ b/aboutme.html
@@ -5,13 +5,13 @@
 </head>
 
 <style>
- h1 (
+ h1 {
    color: purple:
  
-  )
- <body(
+ }
+ <body{
    color: red:
-   background color: yellow
+   background-color: yellow
   
 </style>
 <h1>Reflection</h1>
