--- a/aboutme.html
+++ b/aboutme.html
@@ -6,12 +6,13 @@
 
 <style>
  h1 {
-   color: purple:
+   color: purple;
  
  }
- <body{
-   color: red:
-   background-color: yellow
+ body{
+   color: red;
+   background-color: yellow;
+ }
   
 </style>
 <h1>Reflection</h1>
