--- a/aboutme.html
+++ b/aboutme.html
@@ -23,6 +23,14 @@
  <h2> Reflection</h2>
  <p> A list is information that you can easily get to by using brackets. 
   I worked best with Brittany because we both had so much common and got to express our love for Ed Sheeran. 
+  
+ <h2> Reflection</h2>
+ <p> Today was really fun going to Refinery 29. It was very interesting to learn more about what they do and how they do those things. I liked getting
+  to be part of the shop team where we got to see products and judge what we would want to change about it. I would have liked to actually see more of the 
+  coding from the shop team on how they put everything up for everyone to see. As well, I would have just actually been able to see what the workers do 
+  instead of just having them tell us what they do.
 </body>
 </html>
+
+
 
