--- a/aboutme.html
+++ b/aboutme.html
@@ -29,6 +29,11 @@
   to be part of the shop team where we got to see products and judge what we would want to change about it. I would have liked to actually see more of the 
   coding from the shop team on how they put everything up for everyone to see. As well, I would have just actually been able to see what the workers do 
   instead of just having them tell us what they do.
+  
+<h2> Reflection</2>
+<p> Something I think I could have done better was to actually do some of the wiring and stuff myself. I understood what my group was doing I 
+ just wish I could have done some more myself. As a group I thought we did well on being able to get what we wanted done. Granted sometimes it did
+ take us awhile to do it but we did get everything we wanted to happen to actually happen.
 </body>
 </html>
 
