--- a/aboutme.html
+++ b/aboutme.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html>. 
  </head>
 <title>Page Title</title>
 </head>
@@ -34,6 +34,11 @@
 <p> Something I think I could have done better was to actually do some of the wiring and stuff myself. I understood what my group was doing I 
  just wish I could have done some more myself. As a group I thought we did well on being able to get what we wanted done. Granted sometimes it did
  take us awhile to do it but we did get everything we wanted to happen to actually happen.
+ 
+<h2> Reflection</h2>
+<p> Today we had to remake the LED sensor that we did from yesterday. Then we got to use the sensor to also make a knight rider turn on from the sensor.
+ Then we got to make our robot able to move forward, backwards, and be able to turn. I understood some of it but honestly I get the board and how it works, it's
+ the coding that goes into making it work that sometimes confuses me.
 </body>
 </html>
 
