--- a/aboutme.html
+++ b/aboutme.html
@@ -52,16 +52,14 @@
  way the robot moves on its own using the infrared sensor that still confuses me a bit. All in all, today I'm glad I got to understood more but it still is confusing to me
  sometimes.
  
-<!DOCTYPE html>
-<html>
+
 <body>
 
-<h2>Dog</h2>
+<h2>Spectacular Mountain</h2>
 <img src="pic_dog.jpg" alt="Dog" style="width:306px;height:204px;">
 
 </body>
 </html> 
-     
      
 
 
