--- a/aboutme.html
+++ b/aboutme.html
@@ -10,8 +10,8 @@
  
  }
  body{
-   color: red;
-   background-color: yellow;
+   color: white;
+   background-color: blue;
  }
   
 </style>
@@ -56,7 +56,8 @@
 <body>
 
 <h2>Spectacular Mountain</h2>
-<img src="pic_dog.jpg" alt="Dog" style="width:306px;height:204px;">
+<img src="pic_dog.jpg" alt="Dog" 
+style="width:306px;height:204px;">
 
 </body>
 </html> 
