--- a/aboutme.html
+++ b/aboutme.html
@@ -56,7 +56,7 @@
 <body>
 
 <h2>Dog</h2>
-<img src="pic_dog.jpg" alt="Dog" 
+<img src="pic_dog.jpeg" alt="Dog" 
 style="width:306px;height:204px;">
 
 </body>
