--- a/aboutme.html
+++ b/aboutme.html
@@ -52,7 +52,9 @@
  way the robot moves on its own using the infrared sensor that still confuses me a bit. All in all, today I'm glad I got to understood more but it still is confusing to me
  sometimes.
  
-
+<h2> Reflection </h2>
+<p> Today we learned more about cybersecurity. I honestly think it's pretty interesting how people can hack into differerent things and be able tp block different attacks.
+ It was kind of difficult to be code different things into javascript today. But, once I saw the code it makes sense it's just sometimes hard to first fugure it out on my own.
 <body>
 
 <h2>Dog</h2>
