--- a/aboutme.html
+++ b/aboutme.html
@@ -57,6 +57,8 @@
  It was kind of difficult to be code different things into javascript today. But, once I saw the code it makes sense it's just sometimes hard to first fugure it out on my own.
 <body>
 
+ <h2> Reflection </h2>
+ <p> Today was good. I was able to understand what we were doing from yesterday and today about bubble sort and binary search.
 <h2>Dog</h2>
 <img src="https://s2.postimg.org/kkjrsz4cp/dog.png" alt="Dog" 
 style="width:306px;height:204px;">
