--- a/aboutme.html
+++ b/aboutme.html
@@ -55,7 +55,12 @@
 <h2> Reflection </h2>
 <p> Today we learned more about cybersecurity. I honestly think it's pretty interesting how people can hack into differerent things and be able tp block different attacks.
  It was kind of difficult to be code different things into javascript today. But, once I saw the code it makes sense it's just sometimes hard to first fugure it out on my own.
-<body>
+
+<h2> Reflection </h2>
+<p> I honestly am very excited to start working on these final projects. I've had this idea to make something like this for a very long time. It's not entirely how 
+ I planned it to be but I'm still very excited for what we are going to do. I think that our idea and our plan on how to do everything is very reasonable and be able to be
+ accomplished throughout these last two weeks.
+ <body>
 
  <h2> Reflection </h2>
  <p> Today was good. I was able to understand what we were doing from yesterday and today about bubble sort and binary search.
