--- a/FinalProject.html
+++ b/FinalProject.html
@@ -6,9 +6,10 @@
 <style>
 h1 {
    color: black;
-
-   background-color: blue;
  }
+ <body>
+   background-color: blue;
+ </body>
   
 </style>
 <h1>Connect</h1>
