--- a/FinalProject.html
+++ b/FinalProject.html
@@ -7,12 +7,13 @@
 h1 {
    color: black;
  }
- <body>
-   background-color: blue;
- </body>
+ body{
+  color: black;
+  background-color: blue;
+ }
   
 </style>
 <h1>Connect</h1>
-
-<body>
-</body>
+body{
+ <h2>Talk to others<h/2>
+  }
