--- a/FinalProject.html
+++ b/FinalProject.html
@@ -15,5 +15,7 @@ h1 {
 </style>
 <h1>Connect</h1>
  
- <h3>Talk to others<h/3>
+ <input type="button" value="Talk to Others" onclick="'">
+ <input type="button" value="References" onclick="'">
+ <input type="button" value="Mutual Interests" onclick="'">
   
