--- a/FinalProject.html
+++ b/FinalProject.html
@@ -15,7 +15,33 @@ h1 {
 </style>
 <h1>Connect</h1>
  
+ .button1 {background-color: #555555;} /* Black */
+ .button2 {background-color: #555555;} /* Black */
+ .button3 {background-color: #555555;} /* Black */
+ 
+ .button1 {font-size: 24px;}
+ .button2 {font-size: 24px;}
+ .button3 {font-size: 24px;}
+ 
  <input type="button" value="Talk to Others" onclick="'">
  <input type="button" value="References" onclick="'">
  <input type="button" value="Mutual Interests" onclick="'">
   
+<style>
+.button {
+    background-color: #555555; /* Black */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+}
+
+.button1 {border-radius: 50%;}
+.button2 {border-radius: 50%;}
+.button3 {border-radius: 50%;}
+</style>
