--- a/FinalProject.html
+++ b/FinalProject.html
@@ -11,10 +11,10 @@ h1 {
   color: black;
   background-color: #add8e6;
  }
+ </style>
   <h1>Connect</h1>
 
-
- 
+<style> 
  .button1 {background-color: #555555;} /* Black */
  .button2 {background-color: #555555;} /* Black */
  .button3 {background-color: #555555;} /* Black */
