--- a/FinalProject.html
+++ b/FinalProject.html
@@ -14,7 +14,48 @@ h1 {
  </style>
   <h1>Connect</h1>
 
- <input type="button" value="Talk to Others" onclick="'">
- <input type="button" value="References" onclick="'">
- <input type="button" value="Mutual Interests" onclick="'">
-  
+ <input type="button 1" value="Talk to Others" onclick="'">
+ <input type="button 2" value="References" onclick="'">
+ <input type="button 3" value="Mutual Interests" onclick="'">
+ 
+  <style>
+.button 1 {
+    background-color: #555555; /* Black */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+ .button 2 {
+    background-color: #555555; /* Black */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+}
+.button 3 {
+    background-color: #555555; /* Black */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+}
+
+.button1 {border-radius: 50%;}
+.button2 {border-radius: 50%;}
+.button3 {border-radius: 50%;}
+</style>
