--- a/FinalProject.html
+++ b/FinalProject.html
@@ -14,9 +14,9 @@ h1 {
  </style>
   <h1>Connect</h1>
 
- <input type="button 1" value="Talk to Others" onclick="'">
- <input type="button 2" value="References" onclick="'">
- <input type="button 3" value="Mutual Interests" onclick="'">
+ <input type=".button 1" value="Talk to Others" onclick="'">
+ <input type=".button 2" value="References" onclick="'">
+ <input type=".button 3" value="Mutual Interests" onclick="'">
  
   <style>
 
