--- a/FinalProject.html
+++ b/FinalProject.html
@@ -25,3 +25,12 @@ h1 {
 .button2 {border-radius: 50%;}
 .button3 {border-radius: 50%;}
 </style>
+ 
+ <body>
+ <button class="button button1">50%</button>
+ <button class="button button2">50%</button>
+ <button class="button button3">50%</button>
+ </body>
+
+
+
