--- a/FinalProject.html
+++ b/FinalProject.html
@@ -21,16 +21,12 @@ h1 {
   <style>
 
 
-.button1 {border-radius: 50%;}
-.button2 {border-radius: 50%;}
-.button3 {border-radius: 50%;}
+.button1 {border-radius: 200px;}
+.button2 {border-radius: 200px;}
+.button3 {border-radius: 200px;}
 </style>
  
- <body>
- <button class="button button1">50%</button>
- <button class="button button2">50%</button>
- <button class="button button3">50%</button>
- </body>
+
 
 
 
