--- a/FinalProject.html
+++ b/FinalProject.html
@@ -10,11 +10,18 @@ h1 {
  body{
   color: black;
   background-color: #add8e6;
+ 
+ }
+ 
+ .potato{
+ border-radius:200px;
+ height:200px;
+ width:200px;
  }
  </style>
   <h1>Connect</h1>
 
- <input type=".button 1" value="Talk to Others" onclick="'">
+ <input type=".potato" value="Talk to Others" onclick="'">
  <input type=".button 2" value="References" onclick="'">
  <input type=".button 3" value="Mutual Interests" onclick="'">
  
