--- a/FinalProject.html
+++ b/FinalProject.html
@@ -4,20 +4,7 @@
 <title>Connect</title>
 </head>
 <style>
-h1 {
-   color: black;
- }
- body{
-  color: black;
-  background-color: #add8e6;
- 
- }
- 
- .potato{
- border-radius:200px;
- height:200px;
- width:200px;
- }
+@import url("isabel724.github.io/portfolio/connect.css")
  </style>
   <h1>Connect</h1>
 
