--- a/FinalProject.html
+++ b/FinalProject.html
@@ -4,7 +4,20 @@
 <title>Connect</title>
 </head>
 <style>
-@import url("isabel724.github.io/portfolio/connect.css")
+h1 {
+   color: black;
+ }
+ body{
+  color: black;
+  background-color: #add8e6;
+ 
+ }
+ 
+ .potato{
+ border-radius:200px;
+ height:200px;
+ width:200px;
+ }
  </style>
   <h1>Connect</h1>
 
