--- a/FinalProject.html
+++ b/FinalProject.html
@@ -13,7 +13,7 @@ h1 {
  
  }
  
- .potato{
+ #potato{
  border-radius:200px;
  height:200px;
  width:200px;
@@ -21,9 +21,7 @@ h1 {
  </style>
   <h1>Connect</h1>
 
- <input type=".potato" value="Talk to Others" onclick="'">
- <input type=".button 2" value="References" onclick="'">
- <input type=".button 3" value="Mutual Interests" onclick="'">
+ <button id = "potato">a button</button>
  
  
 
