--- a/FinalProject.html
+++ b/FinalProject.html
@@ -13,7 +13,7 @@ h1 {
  
  }
  
- #potato{
+ #button1{
  border-radius:200px;
  height:200px;
  width:200px;
@@ -21,7 +21,8 @@ h1 {
  </style>
   <h1>Connect</h1>
 
- <button id = "potato">a button</button>
+ <button id = "button1">Talk To Others</button>
+ border-color: transparent;
  
  
 
