--- a/FinalProject.html
+++ b/FinalProject.html
@@ -23,6 +23,29 @@ h1 {
   <h1>Connect</h1>
 
  <button id = "button1">Talk To Others</button>
+ 
+#button2{
+ border-radius:400px;
+ height:200px;
+ width:200px;
+ 
+ }
+ </style>
+  <h1>Connect</h1>
+
+ <button id = "button2">Talk To Others</button>
+
+#button3{
+ border-radius:400px;
+ height:200px;
+ width:200px;
+ 
+ }
+ </style>
+  <h1>Connect</h1>
+
+ <button id = "button3">Talk To Others</button>
+
 
  
  
