--- a/FinalProject.html
+++ b/FinalProject.html
@@ -33,7 +33,7 @@ h1 {
  </style>
   <h1>Connect</h1>
 
- <button id = "button2">Talk To Others</button>
+ <button id = "button2">References</button>
 
 #button3{
  border-radius:400px;
@@ -44,7 +44,7 @@ h1 {
  </style>
   <h1>Connect</h1>
 
- <button id = "button3">Talk To Others</button>
+ <button id = "button3">Mutual Interests</button>
 
 
  
