--- a/FinalProject.html
+++ b/FinalProject.html
@@ -18,33 +18,34 @@ h1 {
  height:200px;
  width:200px;
  
+ #button2{
+ border-radius:400px;
+ height:200px;
+ width:200px;
+  
+
  }
  </style>
   <h1>Connect</h1>
 
  <button id = "button1">Talk To Others</button>
+ <button id = "button2">References</button>
+ <button id = "button3">Mutual Interests</button>
+
+
  
 #button2{
  border-radius:400px;
  height:200px;
  width:200px;
  
- }
- </style>
-  <h1>Connect</h1>
-
- <button id = "button2">References</button>
-
-#button3{
+ #button3{
  border-radius:400px;
  height:200px;
  width:200px;
  
  }
- </style>
-  <h1>Connect</h1>
 
- <button id = "button3">Mutual Interests</button>
 
 
  
