--- a/FinalProject.html
+++ b/FinalProject.html
@@ -16,12 +16,12 @@ h1 {
  #button1{
  border-radius:400px;
  height:200px;
- width:200px;
+  width:200px;}
  
  #button2{
  border-radius:400px;
  height:200px;
- width:200px;
+  width:200px;}
 
    
 #button3{
