--- a/FinalProject.html
+++ b/FinalProject.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>. 
+<html> 
  <head>
 <title>Connect</title>
 </head>
@@ -14,18 +14,18 @@ h1 {
  }
  
  #button1{
- border-radius:400px;
+ border-radius:800px;
  height:200px;
   width:200px;}
  
  #button2{
- border-radius:400px;
+ border-radius:800px;
  height:200px;
   width:200px;}
 
    
 #button3{
- border-radius:400px;
+ border-radius:800px;
  height:200px;
  width:200px;
 
