--- a/FinalProject.html
+++ b/FinalProject.html
@@ -14,20 +14,23 @@ h1 {
  }
  
  #button1{
- border-radius:800px;
+ border-radius:200px;
  height:200px;
-  width:200px;}
+  width:200px;
+ border-color:transparent;}
  
  #button2{
- border-radius:800px;
+ border-radius:200px;
  height:200px;
-  width:200px;}
+  width:200px;
+ border-color:transparent;}
 
    
 #button3{
- border-radius:800px;
+ border-radius:200px;
  height:200px;
  width:200px;
+ border-color:transparent;
 
  }
  </style>
