--- a/FinalProject.html
+++ b/FinalProject.html
@@ -40,6 +40,10 @@ h1 {
  <button id = "button2">References</button>
  <button id = "button3">Mutual Interests</button>
  
+ <input type="button1" value="Talk to Others" onclick="'">
+ <input type="button2" value="References" onclick="'">
+ <input type="button3" value="Mutual Interests" onclick="'">
+ 
 </html>
 
  
