--- a/FinalProject.html
+++ b/FinalProject.html
@@ -39,10 +39,9 @@ h1 {
  <button id = "button1">Talk To Others</button>
  <button id = "button2">References</button>
  <button id = "button3">Mutual Interests</button>
+
  
- <input id="button1" value="Talk to Others" onclick="'">
- <input id="button2" value="References" onclick="'">
- <input id="button3" value="Mutual Interests" onclick="'">
+ <input type="button" value="Talk to others" onclick="'">
  
 </html>
 
