--- a/FinalProject.html
+++ b/FinalProject.html
@@ -35,10 +35,12 @@ h1 {
  }
  </style>
   <h1>Connect</h1>
-
- <button id = "button1">Talk To Others</button>
- <button id = "button2">References</button>
- <button id = "button3">Mutual Interests</button>
+<form>
+<input type="button" value="Talk to Others" onclick="'" />
+<button id = "button1">Talk To Others</button>
+</form>
+<button id = "button2">References</button>
+<button id = "button3">Mutual Interests</button>
 
  
  
