--- a/FinalProject.html
+++ b/FinalProject.html
@@ -36,7 +36,7 @@ h1 {
  </style>
   <h1>Connect</h1>
 <form>
-<input type="button" value="Talk to Others" onclick="'" />
+<input type="button1" onclick="'" />
 </form>
  <button id = "button1">Talk To Others</button>
 <button id = "button2">References</button>
