--- a/FinalProject.html
+++ b/FinalProject.html
@@ -35,13 +35,18 @@ h1 {
  }
  </style>
   <h1>Connect</h1>
-<form>
-<input type="button1" onclick="'" />
-</form>
+
  <button id = "button1">Talk To Others</button>
 <button id = "button2">References</button>
 <button id = "button3">Mutual Interests</button>
 
+<button id="button1" onClick="reply_click()"></button>
+<button id="button2" onClick="reply_click()"></button>
+<button id="button3" onClick="reply_click()"></button>
+
+function reply_click()
+{
+}
  
  
  
