--- a/FinalProject.html
+++ b/FinalProject.html
@@ -40,6 +40,10 @@ h1 {
 <button id = "button2">References</button>
 <button id = "button3">Mutual Interests</button>
  
+ <form>
+<input type="button" value="Profile" onclick="window.location.href=''">
+</form>
+ 
  
  
 </html>
