--- a/FinalProject.html
+++ b/FinalProject.html
@@ -36,16 +36,11 @@ h1 {
  </style>
   <h1>Connect</h1>
 
- <button id = "button1">Talk To Others</button>
-<button id = "button2">References</button>
-<button id = "button3">Mutual Interests</button>
+ <div id = "button1"><button>Talk To Others</button></div>
+ <div id = "button2"><button>References</button></div>
+ <div id = "button3"><button>Mutual Interests</button></div>
  
- <form>
-<input type="button" value="Profile" onclick="window.location.href=''">
-</form>
- 
- 
- 
+
 </html>
 
  
