--- a/FinalProject.html
+++ b/FinalProject.html
@@ -13,33 +13,17 @@ h1 {
  
  }
  
- #button1{
- border-radius:200px;
- height:200px;
-  width:200px;
- border-color:transparent;}
+ <form>
+<input type="button" value="Talk To Others" onclick="window.location.href='https://isabel724.github.io/portfolio/talktoothers.html'">
+</form>
  
- #button2{
- border-radius:200px;
- height:200px;
-  width:200px;
- border-color:transparent;}
-
-   
-#button3{
- border-radius:200px;
- height:200px;
- width:200px;
- border-color:transparent;
-
- }
- </style>
-  <h1>Connect</h1>
-
- <div id = "button1"><button>Talk To Others</button></div>
- <div id = "button2"><button>References</button></div>
- <div id = "button3"><button>Mutual Interests</button></div>
+ <form>
+<input type="button" value="References" onclick="window.location.href='https://isabel724.github.io/portfolio/references.html'">
+</form>
  
+ <form>
+<input type="button" value="Mutual Interests" onclick="window.location.href='https://isabel724.github.io/portfolio/mutualinterests.html'">
+</form>
 
 </html>
 
