--- a/FinalProject.html
+++ b/FinalProject.html
@@ -12,7 +12,8 @@ h1 {
   background-color: #add8e6;
  
  }
- 
+ <h1>Connect<h1>
+ body{
  <form>
 <input type="button" value="Talk To Others" onclick="window.location.href='https://isabel724.github.io/portfolio/talktoothers.html'">
 </form>
@@ -24,6 +25,7 @@ h1 {
  <form>
 <input type="button" value="Mutual Interests" onclick="window.location.href='https://isabel724.github.io/portfolio/mutualinterests.html'">
 </form>
+ }
 
 </html>
 
