--- a/FinalProject.html
+++ b/FinalProject.html
@@ -12,7 +12,7 @@ h1 {
   background-color: #add8e6;
  
  }
- <h1>Connect<h1>
+ <h1>Connect</h1>
  body{
  <form>
 <input type="button" value="Talk To Others" onclick="window.location.href='https://isabel724.github.io/portfolio/talktoothers.html'">
