--- a/FinalProject.html
+++ b/FinalProject.html
@@ -12,8 +12,9 @@ h1 {
   background-color: #add8e6;
  
  }
+ </style>
  <h1>Connect</h1>
- body{
+ 
  <form>
 <input type="button" value="Talk To Others" onclick="window.location.href='https://isabel724.github.io/portfolio/talktoothers.html'"> 
 </form>
@@ -25,7 +26,7 @@ h1 {
  <form>
 <input type="button" value="Mutual Interests" onclick="window.location.href='https://isabel724.github.io/portfolio/mutualinterests.html'">
 </form>
- }
+ 
 
 </html>
 
