--- a/talktoothers.html
+++ b/talktoothers.html
@@ -20,7 +20,7 @@ function chat(){
 	document.getElementById('chat_message').style.display="block";
 	setTimeout("document.getElementById('chat_message').style.display='none'",1500);
 	setTimeout("document.getElementById('response').style.display='block'",14980);
-	setTimeout("document.getElementById('response').innerHTML='<p>Hello? Who is this? Please stop sending me messages!!!</p>'",15000);
+	setTimeout("document.getElementById('response').innerHTML='<p>Hello! How are you today?</p>'",15000);
 }
 </script>
 <style type="text/css">
