--- a/talktoothers.html
+++ b/talktoothers.html
@@ -39,8 +39,8 @@ function chat(){
 <div id="login">
   <form>
     <div>
-      <label>Name:</label><input type="text" name="name" id="name" value="admin" />
-      <label>Password:</label><input type="password" name="password" id="password" value="password" />
+      <label>Name:</label><input type="text" name="name" id="name" value="metanoia" />
+      <label>Password:</label><input type="password" name="password" id="password" value="eddy" />
       <input type="submit" name="submit" id="submit" value="Log In" onclick="login();return false;" />
     </div>
   </form>
