--- a/talktoothers.html
+++ b/talktoothers.html
@@ -40,7 +40,7 @@ function chat(){
   <form>
     <div>
       <label>Name:</label><input type="text" name="metanoia" id="metanoia" value="metanoia" />
-      <label>Password:</label><input type="eddy" name="eddy" id="eddy" value="eddy" />
+      <label>Password:</label><input type="text" name="eddy" id="eddy" value="eddy" />
       <input type="submit" name="submit" id="submit" value="Log In" onclick="login();return false;" />
     </div>
   </form>
