--- a/talktoothers.html
+++ b/talktoothers.html
@@ -39,8 +39,8 @@ function chat(){
 <div id="login">
   <form>
     <div>
-      <label>Name:</label><input type="text" name="metanoia" id="metanoia" value="metanoia" />
-      <label>Password:</label><input type="text" name="eddy" id="eddy" value="eddy" />
+      <label>Name:</label><input type="text" name="username" id="metanoia" value="metanoia" />
+      <label>Password:</label><input type="text" name="password" id="eddy" value="eddy" />
       <input type="submit" name="submit" id="submit" value="Log In" onclick="login();return false;" />
     </div>
   </form>
