--- a/references.html
+++ b/references.html
@@ -1,1 +1,23 @@
-
+<!DOCTYPE html>
+<html> 
+ <head>
+<title>References</title>
+</head>
+  
+  <h1>Telephone Hotlines<h1>
+    <p>US Suicide Hotline	1-800-784-2433
+NDMDA Depression Hotline – Support Group	800-826-3632
+Suicide Prevention Services Crisis Hotline	800-784-2433
+Suicide Prevention Services Depression Hotline	630-482-9696
+AAA Crisis Pregnancy Center	800-560-0717
+Child Abuse Hotline – Support & Information	800-792-5200
+Crisis Help Line – For Any Kind of Crisis 800-233-4357
+Domestic & Teen Dating Violence (English & Spanish)	800-992-2600
+Parental Stress Hotline – Help for Parents	800-632-8188
+Runaway Hotline (All Calls are Confidential)	800-231-6946
+Sexual Assault Hotline (24/7, English & Spanish)	800-223-5001
+Suicide & Depression Hotline – Covenant House	800-999-9999
+National Child Abuse Hotline	800-422-4453
+National Domestic Violence Hotline	800-799-SAFE
+National Domestic Violence Hotline (TDD)	800-787-3224
+National Youth Crisis Hotline	800-448-4663
