--- a/references.html
+++ b/references.html
@@ -12,7 +12,7 @@ Suicide Prevention Services Depression Hotline	630-482-9696
 AAA Crisis Pregnancy Center	800-560-0717
 Child Abuse Hotline – Support and Information	800-792-5200
 Crisis Help Line – For Any Kind of Crisis 800-233-4357
-Domestic and Teen Dating Violence (English & Spanish)	800-992-2600
+Domestic and Teen Dating Violence (English and Spanish)	800-992-2600
 Parental Stress Hotline – Help for Parents	800-632-8188
 Runaway Hotline (All Calls are Confidential)	800-231-6946
 Sexual Assault Hotline (24/7, English and Spanish)	800-223-5001
