--- a/references.html
+++ b/references.html
@@ -5,7 +5,7 @@
 </head>
   
   <h1>Telephone Hotlines<h1>
-    <p>US Suicide Hotline	1-800-784-2433<br>
+    <h2><p>US Suicide Hotline	1-800-784-2433<br>
 NDMDA Depression Hotline – Support Group	800-826-3632<br>
 Suicide Prevention Services Crisis Hotline	800-784-2433<br>
 Suicide Prevention Services Depression Hotline	630-482-9696<br>
