--- a/references.html
+++ b/references.html
@@ -3,6 +3,16 @@
  <head>
 <title>References</title>
 </head>
+ <style>
+h1 {
+   color: black;
+ }
+ body{
+  color: black;
+  background-color: http://allswalls.com/images/landscape-nature-beautiful-area-wild-sky-landscapes-wallpaper-3.jpg;
+ 
+ }
+ </style>
   
   <h1>Telephone Hotlines<h1>
     <h2><p>US Suicide Hotline	1-800-784-2433<br>
