--- a/references.html
+++ b/references.html
@@ -9,7 +9,7 @@ h1 {
  }
  body{
   color: black;
-  background-color: http://allswalls.com/images/landscape-nature-beautiful-area-wild-sky-landscapes-wallpaper-3.jpg;
+  background-image:url("http://allswalls.com/images/landscape-nature-beautiful-area-wild-sky-landscapes-wallpaper-3.jpg");
  
  }
  </style>
