--- a/references.html
+++ b/references.html
@@ -5,10 +5,10 @@
 </head>
  <style>
 h1 {
-   color: black;
+   color: white;
  }
  body{
-  color: black;
+  color: white;
   background-image:url("http://allswalls.com/images/landscape-nature-beautiful-area-wild-sky-landscapes-wallpaper-3.jpg");
 
  
