--- a/aboutme.html
+++ b/aboutme.html
@@ -60,6 +60,9 @@
 <p> I honestly am very excited to start working on these final projects. I've had this idea to make something like this for a very long time. It's not entirely how 
  I planned it to be but I'm still very excited for what we are going to do. I think that our idea and our plan on how to do everything is very reasonable and be able to be
  accomplished throughout these last two weeks.
+ 
+<h2> Reflection </h2>
+<p> Today was good. I got to work more on my final project. I got a lot done today. It was very frustrating at time but I was able to get most of it done.
  <body>
 
  <h2> Reflection </h2>
