--- a/FinalProject.html
+++ b/FinalProject.html
@@ -10,6 +10,12 @@ h1 {
  body{
   color: black;
   background-color: #add8e6;
+  
+  button {
+  color: #900;
+  border: 1px solid #900;
+  font-weight: bold;
+}
  
  }
  </style>
