--- a/FinalProject.html
+++ b/FinalProject.html
@@ -18,6 +18,10 @@ h1 {
 }
  
  }
+ <input type="submit" value="Submit" />
+ 
+<button type="submit" value="Submit">Submit</button>
+ 
  </style>
  <h1>Connect</h1>
  
