--- a/FinalProject.html
+++ b/FinalProject.html
@@ -3,19 +3,18 @@
  <head>
 <title>Connect</title>
 </head>
-<style>
+
+<input type="submit" value="Send"/>
+ <style>
+  input[type="submit"]{
+    /* change these properties to whatever you want */
+    background-color: #555;
+    color: #fff;
+    border-radius: 10px;
+}
+</style>
 h1 {
    color: black;
- }
- body{
-  color: black;
-  background-color: #add8e6;
-  
-  button {
-  color: #900;
-  border: 1px solid #900;
-  font-weight: bold;
-}
  
  }
  <input type="submit" value="Submit" />
