--- a/FinalProject.html
+++ b/FinalProject.html
@@ -9,13 +9,13 @@
  <style>
   input[type="submit"]{
     /* change these properties to whatever you want */
-    background-color: #555;
+    
     color: #fff;
     border-radius: 10px;
 }
 h1 {
    color: black;
- 
+ background-color: #87CEEB;
  }
  <input type="submit" value="Submit" />
  
