--- a/FinalProject.html
+++ b/FinalProject.html
@@ -4,12 +4,12 @@
 <title>Connect</title>
   <input type="submit" value="Send"/>
 </head>
-
+<style>
 h1 {
    color: black;
- background-color: #87CEEB;
+
  }
- 
+  background-color: #87CEEB;
  </style>
  <h1>Connect</h1>
  
