--- a/FinalProject.html
+++ b/FinalProject.html
@@ -15,8 +15,29 @@ h1 {
  <h1>Connect</h1>
  
  <form>
-<input type="button" value="Talk To Others" onclick="window.location.href='https://isabel724.github.io/portfolio/talktoothers.html'"> 
+<input type="button" value="Talk To Others" id="button1" onclick="window.location.href='https://isabel724.github.io/portfolio/talktoothers.html'"> 
 </form>
+ <style>
+  #submit {
+    background-color: black;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    border-radius:6px;
+    color: #4169E1;
+    font-family: 'Oswald';
+    font-size: 20px;
+    text-decoration: none;
+    cursor: pointer;
+    border:none;
+}
+
+
+
+#submit:hover {
+    border: none;
+    background:white;
+    box-shadow: 0px 0px 1px #777;
+}
 <br> 
 <br>
  <form>
