--- a/FinalProject.html
+++ b/FinalProject.html
@@ -18,7 +18,7 @@ h1 {
 <input type="button" value="Talk To Others" id="button1" onclick="window.location.href='https://isabel724.github.io/portfolio/talktoothers.html'"> 
 </form>
  <style>
-  #submit {
+  #button1 {
     background-color: black;
     -moz-border-radius: 5px;
     -webkit-border-radius: 5px;
