--- a/FinalProject.html
+++ b/FinalProject.html
@@ -30,18 +30,30 @@ h1 {
     text-decoration: none;
     cursor: pointer;
     border:none;
-
+ </style>
 <br> 
 <br>
  <form>
-<input type="button" value="References" onclick="window.location.href='https://isabel724.github.io/portfolio/references.html'">
+<input type="button" value="References" id="button2" onclick="window.location.href='https://isabel724.github.io/portfolio/references.html'">
 </form>
+ <style>
+  #button1 {
+    background-color: white;
+    -moz-border-radius: 200px;
+    -webkit-border-radius: 200px;
+    border-radius:200px;
+    color: #2874A6;
+    font-family: 'Oswald';
+    font-size: 20px;
+    text-decoration: none;
+    cursor: pointer;
+    border:none;
+   <style>
  <br>
  <br>
- <form>
-<input type="button" value="Mutual Interests" onclick="window.location.href='https://isabel724.github.io/portfolio/mutualinterests.html'">
-</form>
- 
+<br>
+   <br>
+   <br>
 
 </html>
 
