--- a/FinalProject.html
+++ b/FinalProject.html
@@ -21,9 +21,9 @@ h1 {
  <style>
   #button1 {
     background-color: white;
-    -moz-border-radius: 200px;
-    -webkit-border-radius: 200px;
-    border-radius:200px;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
     color: #2874A6;
     font-family: 'Oswald';
     font-size: 20px;
@@ -37,7 +37,7 @@ h1 {
 <input type="button" value="References" id="button2" onclick="window.location.href='https://isabel724.github.io/portfolio/references.html'">
 </form>
  <style>
-  #button1 {
+  #button2 {
     background-color: white;
     -moz-border-radius: 200px;
     -webkit-border-radius: 200px;
@@ -48,12 +48,10 @@ h1 {
     text-decoration: none;
     cursor: pointer;
     border:none;
-   <style>
+   </style>
  <br>
  <br>
-<br>
-   <br>
-   <br>
+
 
 </html>
 
