--- a/FinalProject.html
+++ b/FinalProject.html
@@ -21,9 +21,9 @@ h1 {
  <style>
   #button1 {
     background-color: white;
-    -moz-border-radius: 50% 50%;
-    -webkit-border-radius: 50% 50%px;
-    border-radius: 50% 50%px;
+    -moz-border-radius: 500px;
+    -webkit-border-radius: 500px;
+    border-radius: 500px;
     color: #2874A6;
     font-family: 'Oswald';
     font-size: 20px;
@@ -39,9 +39,9 @@ h1 {
  <style>
   #button2 {
     background-color: white;
-    -moz-border-radius: 50% 50%px;
-    -webkit-border-radius: 50% 50%px;
-    border-radius:50% 50%px;
+    -moz-border-radius: 500px;
+    -webkit-border-radius: 500px;
+    border-radius:500px;
     color: #2874A6;
     font-family: 'Oswald';
     font-size: 20px;
