--- a/FinalProject.html
+++ b/FinalProject.html
@@ -20,6 +20,8 @@ h1 {
  
  <style>
   #button1 {
+   width: 150px;
+   height: 150px;
     background-color: white;
     -moz-border-radius: 500px;
     -webkit-border-radius: 500px;
@@ -32,6 +34,8 @@ h1 {
     border:none;
  </style>
 <br> 
+<br>
+<br>
 <br>
  <form>
 <input type="button" value="References" id="button2" onclick="window.location.href='https://isabel724.github.io/portfolio/references.html'">
