--- a/FinalProject.html
+++ b/FinalProject.html
@@ -42,6 +42,8 @@ h1 {
 </form>
  <style>
   #button2 {
+   height: 150px;
+   width: 150px;
     background-color: white;
     -moz-border-radius: 500px;
     -webkit-border-radius: 500px;
