--- a/references.html
+++ b/references.html
@@ -34,3 +34,22 @@ National Domestic Violence Hotline	800-799-SAFE<br>
 National Domestic Violence Hotline (TDD)	800-787-3224<br>
 National Youth Crisis Hotline	800-448-4663<br>
    </p>
+  <br>
+     <br>
+     <br>
+      <form>
+<input type="button" value="Click to go back to Connect page" id="connect" onclick="'"> 
+</form>
+<style>
+  #connect {
+    background-color: white;
+    -moz-border-radius: 500px;
+    -webkit-border-radius: 500px;
+    border-radius:500px;
+    color: #2874A6;
+    font-family: 'Oswald';
+    font-size: 20px;
+    text-decoration: none;
+    cursor: pointer;
+    border:none;
+   </style>
