--- a/FinalProject.html
+++ b/FinalProject.html
@@ -69,11 +69,11 @@ h1 {
 </form>
 <style>
   #homepage {
-    background-color: white;
+    background-color: black;
     -moz-border-radius: 500px;
     -webkit-border-radius: 500px;
     border-radius:500px;
-    color: #2874A6;
+    color: white;
     font-family: 'Oswald';
     font-size: 20px;
     text-decoration: none;
