--- a/references.html
+++ b/references.html
@@ -46,7 +46,7 @@ National Youth Crisis Hotline	800-448-4663<br>
     -moz-border-radius: 500px;
     -webkit-border-radius: 500px;
     border-radius:500px;
-    color: #2874A6;
+    color: black;
     font-family: 'Oswald';
     font-size: 20px;
     text-decoration: none;
