--- a/references.html
+++ b/references.html
@@ -38,7 +38,7 @@ National Youth Crisis Hotline	800-448-4663<br>
      <br>
      <br>
       <form>
-<input type="button" value="Click to go back to Connect page" id="connect" onclick="'"> 
+<input type="button" value="Click to go back to Connect page" id="connect" onclick="https://isabel724.github.io/portfolio/FinalProject.html'"> 
 </form>
 <style>
   #connect {
