--- a/profile.html
+++ b/profile.html
@@ -1,118 +1,74 @@
 <!DOCTYPE html>
-<html> 
- <head>
-<title>Profile</title>
-</head>
-  
-<style type="text/css">
-#ProfilePage
-{
-    /* Move it off the top of the page, then centre it horizontally */
-    margin: 50px auto;
-    width: 635px;
-
-/* For visibility. Delete me */
-border: 1px solid red;
+<html>
+<head>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<style>
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  max-width: 300px;
+  margin: auto;
+  text-align: center;
+  font-family: arial;
 }
 
-#LeftCol
-{
-    /* Move it to the left */
-    float: left;
-
-    width: 200px;
-    text-align: center;
-
-    /* Move it away from the content */
-    margin-right: 20px;
-
-/* For visibility. Delete me */
-border: 1px solid brown;
+.container {
+  padding: 0 16px;
 }
 
-#Photo
-{
-    /* Width and height of photo container */
-    width: 200px;
-    height: 200px;
-
-/* For visibility. Delete me */
-border: 1px solid green;
+.container::after {
+  content: "";
+  clear: both;
+  display: table;
 }
 
-#PhotoOptions
-{
-    text-align: center;
-    width: 200px;
-
-/* For visibility. Delete me */
-border: 1px solid brown;
+.title {
+  color: grey;
+  font-size: 18px;
 }
 
-#Info
-{
-    width: 400px;
-    text-align: center;
-
-    /* Move it to the right */
-    float: right;
-
-/* For visibility. Delete me */
-border: 1px solid blue;
+button {
+  border: none;
+  outline: 0;
+  display: inline-block;
+  padding: 8px;
+  color: white;
+  background-color: #000;
+  text-align: center;
+  cursor: pointer;
+  width: 100%;
+  font-size: 18px;
 }
 
-#Info strong
-{
-    /* Give it a width */
-    display: inline-block;
-    width: 100px;
-
-/* For visibility. Delete me */
-border: 1px solid orange;
+a {
+  text-decoration: none;
+  font-size: 22px;
+  color: black;
 }
 
-#Info span
-{
-    /* Give it a width */
-    display: inline-block;
-    width: 250px;
-
-/* For visibility. Delete me */
-border: 1px solid purple;
+button:hover, a:hover {
+  opacity: 0.7;
 }
 </style>
+</head>
+<body>
 
-<div id="ProfilePage">
-    <div id="LeftCol">
-        <div id="Photo"></div>
-        <div id="ProfileOptions">
-        a
-        </div>
-    </div>
+<h2 style="text-align:center">User Profile Card</h2>
 
-    <div id="Info">
-        <p>
-            <strong>Name:</strong>
-            <span>Sirjon</span>
-        </p>
-        <p>
-            <strong>Name:</strong>
-            <span>Sirjon</span>
-        </p>
-        <p>
-            <strong>Name:</strong>
-            <span>Sirjon</span>
-        </p>
-        <p>
-            <strong>Name:</strong>
-            <span>Sirjon</span>
-        </p>
-        <p>
-            <strong>Name:</strong>
-            <span>Sirjon</span>
-        </p>
-    </div>
-
-    <!-- Needed because other elements inside ProfilePage have floats -->
-    <div style="clear:both"></div>
+<div class="card">
+  <img src="/w3images/team2.jpg" alt="John" style="width:100%">
+  <div class="container">
+    <h1>John Doe</h1>
+    <p class="title">CEO & Founder, Example</p>
+    <p>Harvard University</p>
+    <div style="margin: 24px 0;">
+      <a href="#"><i class="fa fa-dribbble"></i></a> 
+      <a href="#"><i class="fa fa-twitter"></i></a>  
+      <a href="#"><i class="fa fa-linkedin"></i></a>  
+      <a href="#"><i class="fa fa-facebook"></i></a> 
+   </div>
+   <p><button>Contact</button></p>
+  </div>
 </div>
+
+</body>
+</html>
