--- a/profile.html
+++ b/profile.html
@@ -9,10 +9,10 @@
     <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/131611/avatar.jpg" alt="Avatar Korra" />
   </aside>
   
-  <h2>Jeremy Paris</h2>
+  <h2>Metanoia Developers</h2>
   <ul class="vitals">
     <li>
-      <a class="twitter" href="//twitter.com/digsite_"><i class="fa fa-twitter"></i></a>
+      <a class="twitter"https://twitter.com/Metanoia2k17"><i class="fa fa-twitter"></i></a>
     </li>
     <li>
       <a class="codepen" href="//codepen.io/digsite_"><i class="fa fa-codepen"></i></a>
@@ -21,7 +21,7 @@
       <a class="github" href="//github.com/digsite"><i class="fa fa-github"></i></a>
     </li>
     <li>
-      <a class="location" href="//maps.google.com/maps?es_sm=119&q=manchester+nh&um=1&ie=UTF-8&hq=&hnear=0x89e24ed668666ca3:0x6b0432461f357179,Manchester,+NH&gl=us&sa=X&ei=zqJ7U5meDsyqyAT98oLQDg&ved=0CLUBELYDMA8"><i class="fa fa-globe"></i></a>
+      <a class="instagram" href=""></i></a>
     </li>
   </ul>
   
