--- a/profile.html
+++ b/profile.html
@@ -12,7 +12,7 @@
   <h2>Metanoia Developers</h2>
   <ul class="vitals">
     <li>
-      <a class="twitter"https://twitter.com/Metanoia2k17"><i class="fa fa-twitter"></i></a>
+      <a class="twitter" href= "//twitter.com/Metanoia2k17"><i class="fa fa-twitter"></i></a>
     </li>
     <li>
       <a class="codepen" href="//codepen.io/digsite_"><i class="fa fa-codepen"></i></a>
