--- a/profile.html
+++ b/profile.html
@@ -21,7 +21,7 @@
       <a class="github" href="//github.com/digsite"><i class="fa fa-github"></i></a>
     </li>
     <li>
-      <a class="instagram" href=""></i></a>
+      <a class="instagram" href="//www.instagram.com/metanoiagwc/?hl=en"></i></a>
     </li>
   </ul>
   
@@ -234,8 +234,8 @@ article[role="profile"] h2{
         content: "GitHub";
       }
       
-      &.location:after {
-        content: "Manchester, NH";
+      &.instagram:after {
+        content: "Instagram";
       }
     }
   }
