--- a/profile.html
+++ b/profile.html
@@ -21,7 +21,7 @@
       <a class="github" href="//github.com/digsite"><i class="fa fa-github"></i></a>
     </li>
     <li>
-      <a class="instagram" href="//www.instagram.com/metanoiagwc/?hl=en"></i></a>
+      <a class="instagram" href="//www.instagram.com/metanoiagwc/?hl=en"><i class="fa fa=instagram"></i></a>
     </li>
   </ul>
   
