--- a/profile.html
+++ b/profile.html
@@ -18,7 +18,7 @@
       <a class="codepen" href="//codepen.io/digsite_"><i class="fa fa-codepen"></i></a>
     </li>
     <li>
-      <a class="github" href="//github.com/digsite"><i class="fa fa-github"></i></a>
+      <a class="github" href="https://github.com/isabel724"><i class="fa fa-github"></i></a>
     </li>
   
   </ul>
