--- a/profile.html
+++ b/profile.html
@@ -231,7 +231,9 @@ article[role="profile"] h2{
   }
 }
 
-.avatar {
+.metanoia {
+  height: 50px;
+  width: 50px;
   float: right;
   margin-left: 1em;
   display: inline-block;
